# Sovereign-SRE

./: .env.example  .gitignore  README.md  check_infra.py  docker-compose.yml  pyproject.toml  run_backend.py
backend/: Dockerfile  requirements.txt
backend/agents/: __init__.py  crew.py  github_tool.py  graph.py  human_loop.py  state.py
backend/api/: main.py
backend/api/routes/: agents.py  rag.py
backend/llm/: claude_client.py  grok_client.py  groq_client.py  provider.py
backend/rag/: __init__.py  codebase_observer.py  query_engine.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DecisionTree.tsx  LogViewer.tsx  StatusPanel.tsx  ThoughtStream.tsx
hf_deploy/: DEPLOY_STEPS.md  Dockerfile  README.md  supervisord.conf
mcp_server/: Dockerfile  main.py  requirements.txt
mcp_server/tools/: __init__.py  execute_shell_command.py  read_repo_structure.py
tests/: stress_test.py
